lre-prod/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-12T03:51:27Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      name: amq-broker-operator
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: amq-broker-operator
    namespace: lre-prod
    resourceVersion: "450239838"
    uid: a0a89364-b449-4d04-a87a-149db7bd9583
  subsets:
  - addresses:
    - ip: 10.129.23.9
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
      targetRef:
        kind: Pod
        name: amq-broker-operator-78cbb94f44-vfbqs
        namespace: lre-prod
        resourceVersion: "450239835"
        uid: b0235e78-7e24-42e5-af35-631197980e4e
    ports:
    - name: metrics
      port: 8383
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: api-integracion
    namespace: lre-prod
    resourceVersion: "472847196"
    uid: 76d20db7-c454-4924-bd5e-64b834080110
  subsets:
  - addresses:
    - ip: 10.128.20.44
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: api-integracion-1-jwv7m
        namespace: lre-prod
        resourceVersion: "472847192"
        uid: abaedad5-8421-416d-b044-a375693322bc
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      app: lre
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre
    namespace: lre-prod
    resourceVersion: "428583511"
    uid: 0979fa85-8e0e-4a74-8d64-7020a291a8d1
  subsets:
  - addresses:
    - ip: 10.130.22.71
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: lre-1-gkfl5
        namespace: lre-prod
        resourceVersion: "428583507"
        uid: 539623f9-323f-48b9-a8bf-ee1ba6207bf5
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:02:40Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-amqp-0-svc
    namespace: lre-prod
    resourceVersion: "474526437"
    uid: 935a0503-c5ab-40ba-8832-e7c13929d046
  subsets:
  - addresses:
    - ip: 10.131.22.246
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-prod
        resourceVersion: "474526429"
        uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    ports:
    - name: amqp-0
      port: 5672
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:03:51Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-amqp-1-svc
    namespace: lre-prod
    resourceVersion: "474528767"
    uid: 1965f47b-ba32-42c6-9881-8320e1b64021
  subsets:
  - addresses:
    - ip: 10.131.22.247
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-prod
        resourceVersion: "474528760"
        uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    ports:
    - name: amqp-1
      port: 5672
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:03:51Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-hdls-svc
    namespace: lre-prod
    resourceVersion: "474528770"
    uid: fc01d58f-cae9-4316-9517-bfa75fe87018
  subsets:
  - addresses:
    - hostname: lre-broker-ss-0
      ip: 10.131.22.246
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-prod
        resourceVersion: "474527557"
        uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    - hostname: lre-broker-ss-1
      ip: 10.131.22.247
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-prod
        resourceVersion: "474528760"
        uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    ports:
    - name: all
      port: 61616
      protocol: TCP
    - name: console-jolokia
      port: 8161
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:03:51Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-ping-svc
    namespace: lre-prod
    resourceVersion: "474528768"
    uid: 1326c553-05ad-4f19-b800-cfe18df1a0cb
  subsets:
  - addresses:
    - ip: 10.131.22.246
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-prod
        resourceVersion: "474527557"
        uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    - ip: 10.131.22.247
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-prod
        resourceVersion: "474528760"
        uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    ports:
    - port: 8888
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:02:40Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-0-svc
    namespace: lre-prod
    resourceVersion: "474526432"
    uid: d40e79cb-3840-43cb-b4ca-6ee71f3e568d
  subsets:
  - addresses:
    - ip: 10.131.22.246
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-prod
        resourceVersion: "474526429"
        uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    ports:
    - name: wconsj-0
      port: 8161
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:03:51Z"
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-1-svc
    namespace: lre-prod
    resourceVersion: "474528769"
    uid: eb0b3052-6751-4d27-b7b8-ca2b34bfe9bc
  subsets:
  - addresses:
    - ip: 10.131.22.247
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-prod
        resourceVersion: "474528760"
        uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    ports:
    - name: wconsj-1
      port: 8161
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      app: lre-preprd
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-preprd
    namespace: lre-prod
    resourceVersion: "428583665"
    uid: 2d002064-8d37-4221-98a6-4e5d66c4c03a
  subsets:
  - addresses:
    - ip: 10.130.22.73
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: lre-preprd-1-m2npm
        namespace: lre-prod
        resourceVersion: "428583663"
        uid: d7beadb9-3d86-4cf2-ae01-4c69835ea262
    ports:
    - name: 8080-tcp
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      app: product-lre
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: product-lre
    namespace: lre-prod
    resourceVersion: "472847166"
    uid: 4848aa91-55ef-4587-a9df-f1ae4685374d
  subsets:
  - addresses:
    - ip: 10.128.20.46
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: product-lre-1-7hx44
        namespace: lre-prod
        resourceVersion: "472847163"
        uid: 90f49504-ccac-4688-8e9a-4bd6c2e6fec5
    - ip: 10.129.22.4
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
      targetRef:
        kind: Pod
        name: product-lre-1-t52w4
        namespace: lre-prod
        resourceVersion: "380476242"
        uid: 7a42e61b-aee2-4660-87c6-10a24029e4d3
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-05T15:38:09Z"
    labels:
      app: product-lre-preprd
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: product-lre-preprd
    namespace: lre-prod
    resourceVersion: "380476264"
    uid: b3b5a422-68e4-4780-91d0-daf11ef187f8
  subsets:
  - addresses:
    - ip: 10.129.22.183
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
      targetRef:
        kind: Pod
        name: product-lre-preprd-1-btfsr
        namespace: lre-prod
        resourceVersion: "380476263"
        uid: 6a5d0888-eec5-46fc-bc84-0592b5b59359
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
