lre-prod/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.23.9
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
    targetRef:
      kind: Pod
      name: amq-broker-operator-78cbb94f44-vfbqs
      namespace: lre-prod
      resourceVersion: "450239835"
      uid: b0235e78-7e24-42e5-af35-631197980e4e
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: amq-broker-operator-
    generation: 102
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: amq-broker-operator
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      name: amq-broker-operator
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: amq-broker-operator-wrfc9
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: amq-broker-operator
      uid: 89fd99dc-ada5-442a-84d1-715e2aa2f16b
    resourceVersion: "450240723"
    uid: 7ce52017-8291-4c68-9dc2-77ad9b400891
  ports:
  - name: metrics
    port: 8383
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.20.44
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: api-integracion-1-jwv7m
      namespace: lre-prod
      resourceVersion: "472847192"
      uid: abaedad5-8421-416d-b044-a375693322bc
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: api-integracion-
    generation: 90
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: api-integracion-ktmq2
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: aa8b2ad8-8fcd-4dc1-bc6c-11f6126dc1fe
    resourceVersion: "472847194"
    uid: 184bfb9b-3786-40ff-b290-405a9fd7254d
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.246
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-prod
      resourceVersion: "474527557"
      uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:03:43Z"
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-broker-amqp-0-svc-
    generation: 98
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-amqp-0-svc
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-amqp-0-svc-td7s2
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-amqp-0-svc
      uid: 82624c32-df22-4e86-86f1-48f6df204b6c
    resourceVersion: "474527558"
    uid: add936fb-08fe-4bb7-85a6-21e2539b1c8e
  ports:
  - name: amqp-0
    port: 5672
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.247
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-prod
      resourceVersion: "474529892"
      uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:05:16Z"
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-broker-amqp-1-svc-
    generation: 93
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-amqp-1-svc
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-amqp-1-svc-cztv4
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-amqp-1-svc
      uid: 99cd30c3-e5c5-4856-bde0-545b7b09c52a
    resourceVersion: "474529895"
    uid: a260b08b-12ce-456c-b1d5-cca02e40ec18
  ports:
  - name: amqp-1
    port: 5672
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.246
    conditions:
      ready: true
      serving: true
      terminating: false
    hostname: lre-broker-ss-0
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-prod
      resourceVersion: "474527557"
      uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    zone: brazilsouth-3
  - addresses:
    - 10.131.22.247
    conditions:
      ready: true
      serving: true
      terminating: false
    hostname: lre-broker-ss-1
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-prod
      resourceVersion: "474529892"
      uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:05:16Z"
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-broker-hdls-svc-
    generation: 189
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-hdls-svc
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-hdls-svc-66m94
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-hdls-svc
      uid: e025b539-16fa-411c-9c86-a31abab0c1c7
    resourceVersion: "474529893"
    uid: 7d78f21a-4dbd-4ff6-8cdd-219f6a3e0797
  ports:
  - name: all
    port: 61616
    protocol: TCP
  - name: console-jolokia
    port: 8161
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.246
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-prod
      resourceVersion: "474527557"
      uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    zone: brazilsouth-3
  - addresses:
    - 10.131.22.247
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-prod
      resourceVersion: "474529892"
      uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:05:16Z"
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-broker-ping-svc-
    generation: 189
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-ping-svc
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-ping-svc-98r5x
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-ping-svc
      uid: d003cf30-7951-4200-a517-6dd0e5301154
    resourceVersion: "474529894"
    uid: 287ea120-5370-400c-a784-f7907eeddefa
  ports:
  - name: ""
    port: 8888
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.246
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-prod
      resourceVersion: "474527557"
      uid: e1dd1c50-72e3-42cd-9715-4064973a78c8
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:03:43Z"
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-broker-wconsj-0-svc-
    generation: 98
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-wconsj-0-svc
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-0-svc-sk57c
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-wconsj-0-svc
      uid: 28f469e1-1019-4f95-b680-07048e893022
    resourceVersion: "474527561"
    uid: 5e7ae64f-f4b5-4fc5-9cb8-5d90114be117
  ports:
  - name: wconsj-0
    port: 8161
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.247
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-prod
      resourceVersion: "474529892"
      uid: db86a36b-0aba-4280-b3ce-004d17af15c9
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-23T20:05:16Z"
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-broker-wconsj-1-svc-
    generation: 93
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-wconsj-1-svc
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-1-svc-xkj8n
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-wconsj-1-svc
      uid: b90aeb8c-a790-48fb-ba5a-c7ddcd9dbe0b
    resourceVersion: "474529896"
    uid: f3c4befb-3d78-4383-92d7-94cc6bfafa1b
  ports:
  - name: wconsj-1
    port: 8161
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.22.71
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
    targetRef:
      kind: Pod
      name: lre-1-gkfl5
      namespace: lre-prod
      resourceVersion: "428583507"
      uid: 539623f9-323f-48b9-a8bf-ee1ba6207bf5
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-
    generation: 64
    labels:
      app: lre
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-jcrl7
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre
      uid: f534d686-4116-4f11-a74b-29f6ff3e0a81
    resourceVersion: "428583510"
    uid: 9228d3e9-4f5e-43a3-ac42-32fa5bd8232f
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.22.73
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
    targetRef:
      kind: Pod
      name: lre-preprd-1-m2npm
      namespace: lre-prod
      resourceVersion: "428583663"
      uid: d7beadb9-3d86-4cf2-ae01-4c69835ea262
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: lre-preprd-
    generation: 64
    labels:
      app: lre-preprd
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-preprd
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-preprd-h2bwk
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-preprd
      uid: fc3cc655-aaae-4c4c-aab8-5dc6f1742577
    resourceVersion: "428583664"
    uid: fc829be9-dab0-4faf-bb51-e78bcdb2ea2a
  ports:
  - name: 8080-tcp
    port: 3000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.22.4
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
    targetRef:
      kind: Pod
      name: product-lre-1-t52w4
      namespace: lre-prod
      resourceVersion: "380476242"
      uid: 7a42e61b-aee2-4660-87c6-10a24029e4d3
    zone: brazilsouth-1
  - addresses:
    - 10.128.20.46
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: product-lre-1-7hx44
      namespace: lre-prod
      resourceVersion: "472847163"
      uid: 90f49504-ccac-4688-8e9a-4bd6c2e6fec5
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: product-lre-
    generation: 137
    labels:
      app: product-lre
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: product-lre
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: product-lre-jpr5t
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: product-lre
      uid: 282f13f0-3236-416f-88bb-92b8c633ed5d
    resourceVersion: "472847168"
    uid: 1d39ad60-b617-415a-a914-190b777ce000
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.22.183
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
    targetRef:
      kind: Pod
      name: product-lre-preprd-1-btfsr
      namespace: lre-prod
      resourceVersion: "380476263"
      uid: 6a5d0888-eec5-46fc-bc84-0592b5b59359
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-05T15:38:12Z"
    generateName: product-lre-preprd-
    generation: 72
    labels:
      app: product-lre-preprd
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: product-lre-preprd
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: product-lre-preprd-g9f5v
    namespace: lre-prod
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: product-lre-preprd
      uid: 380020c2-8cf6-4521-af58-d77fca3f6b5c
    resourceVersion: "380476265"
    uid: e32781aa-4e0b-44eb-b656-beadbfa01061
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
