lre-prod/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:28:47Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: api-integracion
    namespace: lre-prod
    resourceVersion: "94940060"
    uid: 0413788f-b938-46ea-91cb-f072ce551709
  spec:
    host: api-integracion-lre.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:28:47Z"
        status: "True"
        type: Admitted
      host: api-integracion-lre.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:31:18Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-amqp-0-svc-rte
    namespace: lre-prod
    resourceVersion: "94941608"
    uid: 76b8fd2b-00ec-426a-b01a-d91bee364a62
  spec:
    host: lre-broker-amqp-0-svc-rte-lre-prod.api-cloud.dirtrab.cl
    port:
      targetPort: amqp-0
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-amqp-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:31:18Z"
        status: "True"
        type: Admitted
      host: lre-broker-amqp-0-svc-rte-lre-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:32:47Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-amqp-1-svc-rte
    namespace: lre-prod
    resourceVersion: "94942381"
    uid: af3d4ddc-0176-43be-a5a9-acddb4619b70
  spec:
    host: lre-broker-amqp-1-svc-rte-lre-prod.api-cloud.dirtrab.cl
    port:
      targetPort: amqp-1
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-amqp-1-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:32:47Z"
        status: "True"
        type: Admitted
      host: lre-broker-amqp-1-svc-rte-lre-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:34:35Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-0-svc-rte
    namespace: lre-prod
    resourceVersion: "94943534"
    uid: f99932fd-ff89-4a87-85dd-941a060a2b73
  spec:
    host: lre-broker-wconsj-0-svc-rte-lre-prod.api-cloud.dirtrab.cl
    port:
      targetPort: wconsj-0
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-wconsj-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:34:35Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-0-svc-rte-lre-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-07-03T19:03:10Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-0-svc-rte-ocp4
    namespace: lre-prod
    resourceVersion: "44968425"
    uid: 9c4d78cf-5a5d-4bb9-9526-501d9a534715
  spec:
    host: lre-broker-wconsj-0-svc-rte-lre-prod.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: wconsj-0
    to:
      kind: Service
      name: lre-broker-wconsj-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-07-03T19:03:10Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-0-svc-rte-lre-prod.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:36:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-broker-wconsj-1-svc-rte
    namespace: lre-prod
    resourceVersion: "94944804"
    uid: 7d807a11-fca6-4955-8562-dedcf9aa303f
  spec:
    host: lre-broker-wconsj-1-svc-rte-lre-prod.api-cloud.dirtrab.cl
    port:
      targetPort: wconsj-1
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-wconsj-1-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:36:38Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-1-svc-rte-lre-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:41:24Z"
    labels:
      app: lre-preprd
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-preprd
    namespace: lre-prod
    resourceVersion: "94947421"
    uid: 593b565b-fcb9-4cb1-8444-5b285b18b59f
  spec:
    host: lre-preprd.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIG9zCCBd+gAwIBAgIQdxax6IFcRy1HTGrMcK6bgjANBgkqhkiG9w0BAQsFADCB
[...]
        155XU6dQD+3u1kg=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEogIBAAKCAQEAvgcx1vbxZuf93lSqWFaKXkThQ1Z+N6YvRNJ/e82gANcYhQSu
[...]
        sXhV4ElUdmqb2hWizY2Nv2wgXsez3qeNoCwx6m4bomMFv903wR4=
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-preprd
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:41:24Z"
        status: "True"
        type: Admitted
      host: lre-preprd.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:55:11Z"
    labels:
      app: lre
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: lre-produccion
    namespace: lre-prod
    resourceVersion: "94955342"
    uid: 03072799-1a1a-4877-8955-ab718a19d065
  spec:
    host: lre.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIG9zCCBd+gAwIBAgIQdxax6IFcRy1HTGrMcK6bgjANBgkqhkiG9w0BAQsFADCB
[...]
        155XU6dQD+3u1kg=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEogIBAAKCAQEAvgcx1vbxZuf93lSqWFaKXkThQ1Z+N6YvRNJ/e82gANcYhQSu
[...]
        sXhV4ElUdmqb2hWizY2Nv2wgXsez3qeNoCwx6m4bomMFv903wR4=
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:55:11Z"
        status: "True"
        type: Admitted
      host: lre.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:53:25Z"
    labels:
      app: product-lre
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: product-lre
    namespace: lre-prod
    resourceVersion: "94954355"
    uid: 149909ac-9cbd-4979-9b40-005ad1bacfde
  spec:
    host: product-lre-lre-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: product-lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:53:25Z"
        status: "True"
        type: Admitted
      host: product-lre-lre-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:56:46Z"
    labels:
      app: product-lre-preprd
      migration.openshift.io/migrated-by-migmigration: 0ccd2f67-7ac7-4be0-a33f-fe509b3b234f
      migration.openshift.io/migrated-by-migplan: 650c7753-846f-4da6-a5a7-eff123c536a8
      velero.io/backup-name: migration-e3183-initial-mpd46
      velero.io/restore-name: migration-e3183-final-ltssc
    name: product-lre-preprd
    namespace: lre-prod
    resourceVersion: "94956384"
    uid: bdec0a09-072e-4f44-8647-c8e2ea3341ba
  spec:
    host: product-lre-preprd-lre-prod.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: product-lre-preprd
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:56:46Z"
        status: "True"
        type: Admitted
      host: product-lre-preprd-lre-prod.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
